// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Select [getSelectedOptions] should return the selected options or the placeholder if given 1`] = `
<Select
  multiple={true}
  options={
    Array [
      Object {
        "text": "React.js",
        "value": "React.js",
      },
      Object {
        "text": "Vue.js",
        "value": "Vue.js",
      },
      Object {
        "text": "Angular.js",
        "value": "Angular.js",
      },
      Object {
        "text": "jQuery",
        "value": "jQuery",
      },
      Object {
        "text": "Knockout",
        "value": "Knockout",
      },
      Object {
        "text": "Backbone",
        "value": "Backbone",
      },
      Object {
        "text": "Ember",
        "value": "Ember",
      },
      Object {
        "text": "Bootstrap",
        "value": "Bootstrap",
      },
      Object {
        "text": "Other",
        "value": "Other",
      },
    ]
  }
  placeholder="my-placeholder"
  required={false}
  selected={Array []}
  size="medium"
>
  <OutsideClickable
    onOutsideClick={[Function]}
  >
    <div
      className="select multiple"
      key=".0"
      onClick={[Function]}
    >
      <div
        className="selectInner"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={0}
      >
        <div
          className="ph"
        >
          <Option
            closeIcon={true}
            key="React.js"
            onClose={[Function]}
            selected={false}
            text="React.js"
            value="React.js"
          >
            <div
              className="option"
              key="React.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                React.js
              </span>
              <Close
                className="icoClose"
                onClick={[Function]}
              >
                <Sprite
                  className="icoClose"
                  id="close"
                  onClick={[Function]}
                  viewBox="0 0 24 24"
                >
                  <svg
                    className="svg-sprite icoClose"
                    onClick={[Function]}
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <use
                      xlinkHref="#close"
                    />
                  </svg>
                </Sprite>
              </Close>
            </div>
          </Option>
          <Option
            closeIcon={true}
            key="jQuery"
            onClose={[Function]}
            selected={false}
            text="jQuery"
            value="jQuery"
          >
            <div
              className="option"
              key="jQuery"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                jQuery
              </span>
              <Close
                className="icoClose"
                onClick={[Function]}
              >
                <Sprite
                  className="icoClose"
                  id="close"
                  onClick={[Function]}
                  viewBox="0 0 24 24"
                >
                  <svg
                    className="svg-sprite icoClose"
                    onClick={[Function]}
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <use
                      xlinkHref="#close"
                    />
                  </svg>
                </Sprite>
              </Close>
            </div>
          </Option>
        </div>
        <div
          className="options"
        >
          <Option
            highlighted={false}
            key="opt-React.js"
            onClick={[Function]}
            selected={true}
            text="React.js"
            tickIcon={true}
            value="React.js"
          >
            <div
              className="selected option"
              key="React.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                React.js
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Vue.js"
            onClick={[Function]}
            selected={false}
            text="Vue.js"
            tickIcon={true}
            value="Vue.js"
          >
            <div
              className="option"
              key="Vue.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Vue.js
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Angular.js"
            onClick={[Function]}
            selected={false}
            text="Angular.js"
            tickIcon={true}
            value="Angular.js"
          >
            <div
              className="option"
              key="Angular.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Angular.js
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-jQuery"
            onClick={[Function]}
            selected={true}
            text="jQuery"
            tickIcon={true}
            value="jQuery"
          >
            <div
              className="selected option"
              key="jQuery"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                jQuery
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Knockout"
            onClick={[Function]}
            selected={false}
            text="Knockout"
            tickIcon={true}
            value="Knockout"
          >
            <div
              className="option"
              key="Knockout"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Knockout
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Backbone"
            onClick={[Function]}
            selected={false}
            text="Backbone"
            tickIcon={true}
            value="Backbone"
          >
            <div
              className="option"
              key="Backbone"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Backbone
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Ember"
            onClick={[Function]}
            selected={false}
            text="Ember"
            tickIcon={true}
            value="Ember"
          >
            <div
              className="option"
              key="Ember"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Ember
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Bootstrap"
            onClick={[Function]}
            selected={false}
            text="Bootstrap"
            tickIcon={true}
            value="Bootstrap"
          >
            <div
              className="option"
              key="Bootstrap"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Bootstrap
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Other"
            onClick={[Function]}
            selected={false}
            text="Other"
            tickIcon={true}
            value="Other"
          >
            <div
              className="option"
              key="Other"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Other
              </span>
              <Tick
                className="icoCheck"
              >
                <Sprite
                  className="icoCheck"
                  id="tick"
                  viewBox="0 0 30 30"
                >
                  <svg
                    className="svg-sprite icoCheck"
                    role="img"
                    viewBox="0 0 30 30"
                  >
                    <use
                      xlinkHref="#tick"
                    />
                  </svg>
                </Sprite>
              </Tick>
            </div>
          </Option>
        </div>
        <input
          type="hidden"
          value="React.js,jQuery"
        />
      </div>
    </div>
  </OutsideClickable>
</Select>
`;

exports[`(Component) Select [snapshot] should match 1`] = `
<Select
  multiple={false}
  options={
    Array [
      Object {
        "text": "React.js",
        "value": "React.js",
      },
      Object {
        "text": "Vue.js",
        "value": "Vue.js",
      },
      Object {
        "text": "Angular.js",
        "value": "Angular.js",
      },
      Object {
        "text": "jQuery",
        "value": "jQuery",
      },
      Object {
        "text": "Knockout",
        "value": "Knockout",
      },
      Object {
        "text": "Backbone",
        "value": "Backbone",
      },
      Object {
        "text": "Ember",
        "value": "Ember",
      },
      Object {
        "text": "Bootstrap",
        "value": "Bootstrap",
      },
      Object {
        "text": "Other",
        "value": "Other",
      },
    ]
  }
  required={false}
  selected={
    Array [
      "jQuery",
    ]
  }
  size="medium"
>
  <OutsideClickable
    onOutsideClick={[Function]}
  >
    <div
      className="select"
      key=".0"
      onClick={[Function]}
    >
      <div
        className="selectInner"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={0}
      >
        <div
          className="ph"
        >
          <Option
            closeIcon={false}
            key="jQuery"
            selected={false}
            text="jQuery"
            value="jQuery"
          >
            <div
              className="option"
              key="jQuery"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                jQuery
              </span>
            </div>
          </Option>
        </div>
        <div
          className="options"
        >
          <Option
            highlighted={false}
            key="opt-React.js"
            onClick={[Function]}
            selected={false}
            text="React.js"
            tickIcon={false}
            value="React.js"
          >
            <div
              className="option"
              key="React.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                React.js
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Vue.js"
            onClick={[Function]}
            selected={false}
            text="Vue.js"
            tickIcon={false}
            value="Vue.js"
          >
            <div
              className="option"
              key="Vue.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Vue.js
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Angular.js"
            onClick={[Function]}
            selected={false}
            text="Angular.js"
            tickIcon={false}
            value="Angular.js"
          >
            <div
              className="option"
              key="Angular.js"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Angular.js
              </span>
            </div>
          </Option>
          <Option
            highlighted={true}
            key="opt-jQuery"
            onClick={[Function]}
            selected={true}
            text="jQuery"
            tickIcon={false}
            value="jQuery"
          >
            <div
              className="selected highlighted option"
              key="jQuery"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                jQuery
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Knockout"
            onClick={[Function]}
            selected={false}
            text="Knockout"
            tickIcon={false}
            value="Knockout"
          >
            <div
              className="option"
              key="Knockout"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Knockout
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Backbone"
            onClick={[Function]}
            selected={false}
            text="Backbone"
            tickIcon={false}
            value="Backbone"
          >
            <div
              className="option"
              key="Backbone"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Backbone
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Ember"
            onClick={[Function]}
            selected={false}
            text="Ember"
            tickIcon={false}
            value="Ember"
          >
            <div
              className="option"
              key="Ember"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Ember
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Bootstrap"
            onClick={[Function]}
            selected={false}
            text="Bootstrap"
            tickIcon={false}
            value="Bootstrap"
          >
            <div
              className="option"
              key="Bootstrap"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Bootstrap
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Other"
            onClick={[Function]}
            selected={false}
            text="Other"
            tickIcon={false}
            value="Other"
          >
            <div
              className="option"
              key="Other"
              onClick={[Function]}
            >
              <span
                className="text"
              >
                Other
              </span>
            </div>
          </Option>
        </div>
        <input
          type="hidden"
          value="jQuery"
        />
      </div>
    </div>
  </OutsideClickable>
</Select>
`;
